# rust-survivors

./: Cargo.toml  Config.toml
assets/: Fire Effect and Bullet 16x16.aseprite  Prototype_Worksheet.aseprite  Skeleton.aseprite  Skeleton.json  bullets.json  prototype_char.json
assets/docs/: ability_ideas.md
assets/prefabs/enemies/: knight.yml  skeleton.yml
assets/prefabs/guns/: default_gun.yaml  new_gun.yaml
assets/sprites/knight/: Idle.layout  Idle.yml  Run.aseprite  Run.layout  Run.yml
assets/sprites/skeleton/: Idle.layout  Run.yml
src/: args.rs  bundles.rs  components.rs  constants.rs  main.rs  random.rs  setup.rs  stepping.rs  time.rs
src/extensions/: mod.rs  spew_extensions.rs  vectors.rs
src/initialization/: inspector.rs  load_prefabs.rs  mod.rs  register_types.rs
src/physics/: layers.rs  mod.rs  time.rs  walls.rs
src/systems/: animation.rs  audio.rs  dev.rs  guns.rs  input.rs  mod.rs  movement.rs  set_follower_velocity.rs  spawning.rs  stats.rs  ui.rs
temporary_component_derive/: Cargo.toml
temporary_component_derive/src/: lib.rs
